--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "deploy": "scripts/deploy.sh",
-    "build:all": "scripts/build-all.sh",
+    "build:all": "yarn build:common && yarn build:backend && yarn build:frontend",
     "start:frontend": "scripts/start-frontend.sh",
     "build:frontend": "scripts/build-frontend.sh",
     "start:backend": "scripts/start-backend.sh",
